[package]
name = "axum-gql"
version = "0.1.0"
authors = ["Matt Wilkinson <mattwilki17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.3"
async-graphql = "2.9.10"
slab = "0.4.4"
tokio = { version = "1.9.0", features = ["macros", "time", "rt-multi-thread"] }